test/ui/tests/parsing/unexpected-line-break.lushui
;;; TEST fail check

data X: (
